--- a/data/index.html
+++ b/data/index.html
@@ -45,7 +45,7 @@
     <h1 id='temperature'> </h1>
     <h2 id='targetTemp'> </h2>
     <h2 id='status'> </h2>
-    <h2 id='system'>system menu</h2>
+    <h2 id='system'>system</h2>
     <div id='systemmenu'>
       <form class="form" method="post" action="/config">
         <div class="form-row">
@@ -81,7 +81,7 @@
       </form>
     </div>
 
-    <h2 id='profile'>profile menu</h2>
+    <h2 id='profile'>profile</h2>
     <div id='profilemenu'>
       <form class="form" method="post" action="/setprofile">
         <div class="form-row">
