Add ability to start and stop heat/cool by URL parameters.

--- a/data/index.html
+++ b/data/index.html
@@ -71,7 +71,7 @@
                 <option>Heating</option>
                 <option>Cooling</option>
                 <option>OFF</option>
-                <!-- <option>Slave</option> -->
+                <option>Slave-EXPERIMENTAL</option>
               </select>
           </label>
         </div>
